# BudgetBench

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
budgetbench/: evaluator.py
scripts/: aggregate_model_performance.py  aggregate_results.py  run_all_models.py
src/budgetbench/: __init__.py  aggregate.py  cli.py  debug.py  llm.py  llm_cost.py  runner.py
tests/: test_aggregate.py  test_budget_runner_integration.py  test_evaluator.py  test_gsm8k_runner.py  test_llm.py  test_llm_cost_integration.py  test_openai_integration.py  test_run_all_models.py  test_runner.py  test_runner_dataset.py
