[project]
name = "budgetbench"
version = "0.1.0"
description = "Budget-conscious LLM evaluation toolkit"
authors = [{name="BudgetBench"}]
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.4.1",
    "datasets",
    "human-eval",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
