[project]
name = "budgetbench"
version = "0.1.0"
description = "Budget-conscious LLM evaluation toolkit"
authors = [{name="BudgetBench"}]
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.4.1",
    "datasets",
    "human-eval",
    "openai>=1.0.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
budgetbench-run = "budgetbench.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: tests that call external LLM providers",
]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/budgetbench"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
